--- a/frontend/src/app/shared/change-log/change-log-set/change-log-set.component.html
+++ b/frontend/src/app/shared/change-log/change-log-set/change-log-set.component.html
@@ -13,7 +13,7 @@
       </div>
       <div *ngIf="model == 'Job'">
         <h5>Job: <br><strong>{{log.old.jobNumber}}</strong></h5>
-        <h5 *ngIf="log.old.partNum">Part: <br><strong>{{log.old.partNum}}</strong></h5>
+        <h5 *ngIf="log.old.partNumber">Part: <br><strong>{{log.old.partNumber}}</strong></h5>
         <h5 *ngIf="log.old.orderQuantity">Order Quantity: <br><strong>{{log.old.orderQuantity}}</strong></h5>
         <h5 *ngIf="log.old.weightRecieved">Weight Recieved: <br><strong>{{log.old.weightRecieved}}</strong></h5>
         <h5 *ngIf="log.old.weightQuantity">Potential Quantity by Weight: <br><strong>{{log.old.weightQuantity}}</strong></h5>
