--- a/frontend/src/app/job/job-edit/job-edit.component.html
+++ b/frontend/src/app/job/job-edit/job-edit.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <form *ngIf="canInput && editJobForm" [formGroup]="editJobForm" (ngSubmit)='onSubmit()' >
-  <h4><strong>Job# {{jobNum}}, Part# {{job.partNum}}</strong></h4>
+  <h4><strong>Job# {{jobNum}}, Part# {{job.partNumber}}</strong></h4>
   <div class="form-group">
     <h6 for="orderQuantity">Order Quantity (Optional)</h6>
     <input 
