--- a/frontend/src/app/job/job.component.html
+++ b/frontend/src/app/job/job.component.html
@@ -2,7 +2,6 @@
     <div class="row">
         <div class="col-xs-12 col-sm-10 col-md-12 col-sm-offset-1 col-md-offset-0">
             <div class="grid">
-
                 <button 
                     *ngIf="!auth.buttonHidden[0]"
                     class='btn btn-primary'
@@ -15,7 +14,20 @@
                 >
                 </div>
                 <div></div>
-                <div></div>
+                <button 
+                    *ngIf="jobServ.onlyActive"
+                    class='btn btn-primary'
+                    (click)="switchActive()"
+                >
+                    Show All Jobs
+                </button>
+                <button 
+                    *ngIf="!jobServ.onlyActive"
+                    class='btn btn-primary'
+                    (click)="switchActive()"
+                >
+                    Show Only Active Jobs
+                </button>
                 <div></div>
                 <button 
                     *ngIf="!auth.buttonHidden[1]"
