--- a/frontend/src/app/production/production-list/production-list.component.html
+++ b/frontend/src/app/production/production-list/production-list.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="auth.machType == 'lathe'" class="grid">
-    <div *ngFor="let id of ids" >
-        <app-production-find-show  [inputId]="id"></app-production-find-show>
+    <div *ngFor="let lot of productionLots" >
+        <app-production-find-show  [singleProd]="lot"></app-production-find-show>
     </div>
 </div>
 <div *ngIf="auth.machType == 'mill'">
