Updated parts to be gotten as active or inactive

--- a/frontend/src/app/part/part-show/part-show.component.html
+++ b/frontend/src/app/part/part-show/part-show.component.html
@@ -1,7 +1,7 @@
 <div class='grid' >
   <div *ngFor="let part of parts"> 
     <div>
-      <app-part-find-show [partInput]="part.partNumber"></app-part-find-show>    
+      <app-part-find-show [partInput]="part"></app-part-find-show>    
     </div>
   </div>
 </div>
