--- a/frontend/src/app/production/production-mill/production-mill.component.html
+++ b/frontend/src/app/production/production-mill/production-mill.component.html
@@ -1,35 +1,3 @@
-<div *ngFor="let set of millSets">
-  <div class="cover">
-    <h2 class="bold">{{set[0].machine}}</h2>
-    <div *ngFor="let part of set">
-      <h3 class="bold">Part Number: {{part.partNumber}}</h3>
-      <div class="grid">
-        <div class="border">
-          <h4>Job</h4>
-          <h4 class="bold">{{part.jobNumber}}</h4>
-        </div>
-        <div class="border" *ngFor="let op of part.ops">
-          <h4>Op Number</h4>
-          <h4 class="bold">{{op.opNumber}}</h4>
-          <h4>Parts To Date:</h4>
-          <div *ngIf="!editMode">
-            <div *ngIf="op.partsToDate">
-                <h4 class="bold">{{op.partsToDate}}</h4>
-            </div>
-            <div *ngIf="!op.partsToDate">
-                <h4 class="bold">0</h4>
-            </div>
-          </div>
-          <div *ngIf="editMode">
-            <app-production-total partsToDate="{{op.partsToDate}}" opNumber="{{op.opNumber}}" jobNumber="{{part.jobNumber}}"></app-production-total>
-          </div>
-          <div class="grid2">
-            <button *ngIf="!editMode" class="btn btn-primary" (click)="changeEdit()">
-              <h6>Update</h6>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<div *ngFor="let mach of machines">
+  <app-production-mill-mach [machine]="auth.rejoin(mach.machine)"></app-production-mill-mach>
 </div>
