--- a/frontend/src/app/production/production-mill/production-mill-job/production-mill-job.component.css
+++ b/frontend/src/app/production/production-mill/production-mill-job/production-mill-job.component.css
@@ -3,7 +3,7 @@
     grid-template-columns: 14.2% 14.2% 14.2% 14.2% 14.2% 14.2% 14.2%;
 }
 
-h3, h4, h6{
+h3, h4, h5, h6{
     text-align: center;
 }
 
