displaying order quantity for job on mill production page

--- a/frontend/src/app/production/production-mill/production-mill-op/production-mill-op.component.html
+++ b/frontend/src/app/production/production-mill/production-mill-op/production-mill-op.component.html
@@ -13,7 +13,7 @@
   <app-production-total partsToDate="{{op.partsToDate}}" opNumber="{{op.opNumber}}" jobNumber="{{jobNumber}}"></app-production-total>
 </div>
 <div *ngIf="op.remainingQuantity && op.cycleTime">
-  <h5 class="bold">{{hours}} {{hourFormat}}<br>{{minutes}} {{minFormat}} Remaining</h5>
+  <h5 class="bold">{{hours}} {{hourFormat}}<br>{{minutes}} {{minFormat}}<br>Remaining</h5>
 </div>
 <div class="grid">
   <button *ngIf="!editMode" class="btn btn-primary" (click)="changeEdit()">
