--- a/frontend/src/app/production/production-mill/production-mill-job/production-mill-job.component.html
+++ b/frontend/src/app/production/production-mill/production-mill-job/production-mill-job.component.html
@@ -4,9 +4,14 @@
     <div class="border">
       <h4>Job</h4>
       <h4 class="bold">{{job.jobNumber}}</h4>
+      <h4>Order Quantity:</h4>
+      <h4 class="bold">{{job.orderQuantity}}</h4>
+      <div *ngIf="job.remainingQuantity">
+          <h4>Remaining Quantity:</h4>
+          <h4 class="bold">{{job.remainingQuantity}}</h4>
+      </div>
       <div *ngIf="hours + minutes > 0">
-        <br><br>
-        <h5 class="bold">{{hours}} {{hourFormat}}<br>{{minutes}} {{minFormat}} Remaining</h5>
+        <h5 class="bold">{{hours}} {{hourFormat}}<br>{{minutes}} {{minFormat}}<br>Remaining</h5>
       </div>
     </div>
     <div class="border" *ngFor="let op of ops">
