Updating shown job remaining value by passing value to parents

--- a/frontend/src/app/production/production-mill/production-mill-job/production-mill-job.component.html
+++ b/frontend/src/app/production/production-mill/production-mill-job/production-mill-job.component.html
@@ -18,6 +18,7 @@
       <app-production-mill-op
         (hour)="hourAdder($event)"
         (minute)="minuteAdder($event)"
+        (remains)="catchRemains($event)"
         [op]="op" 
         jobNumber="{{job.jobNumber}}"></app-production-mill-op>
     </div>
