--- a/frontend/src/app/production/production-mill/production-mill-op/production-mill-op.component.html
+++ b/frontend/src/app/production/production-mill/production-mill-op/production-mill-op.component.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 <div *ngIf="editMode">
-  <app-production-total partsToDate="{{op.partsToDate}}" opNumber="{{op.opNumber}}" jobNumber="{{jobNumber}}"></app-production-total>
+  <app-production-total (remainingQ)="emitRemains($event)" partsToDate="{{op.partsToDate}}" opNumber="{{op.opNumber}}" jobNumber="{{jobNumber}}"></app-production-total>
 </div>
 <div *ngIf="op.remainingQuantity && op.cycleTime">
   <h5 class="bold">{{hours}} {{hourFormat}}<br>{{minutes}} {{minFormat}}<br>Remaining</h5>
