--- a/frontend/src/app/part/part-new/part-new.component.html
+++ b/frontend/src/app/part/part-new/part-new.component.html
@@ -10,6 +10,14 @@
           class="form-control"
         >
       </div>
+      <div class="form-group">
+        <label for="rev">Rev</label>
+        <input 
+          formControlName='rev'
+          id="rev" 
+          class="form-control"
+        >
+      </div>
       <br><br>
       <div class='grid'>
         <button 
