--- a/frontend/src/app/production/production-mill/production-mill-op/production-mill-op.component.css
+++ b/frontend/src/app/production/production-mill/production-mill-op/production-mill-op.component.css
@@ -1,13 +1,16 @@
-h3, h4, h5, h6{
+h3, h5, h5, h6{
     text-align: center;
 }
 
-h6{
+.short{
     line-height: 30%;
 }
-
 
 .grid { 
     display: grid;
     grid-template-columns: 100%;
+}
+
+h4{
+    line-height: 10%;
 }
