--- a/frontend/src/app/job/job-new/job-new.component.html
+++ b/frontend/src/app/job/job-new/job-new.component.html
@@ -37,7 +37,7 @@
             class="form-control">
         </div>
         <div class="form-group">
-          <label for="oal">Overall Length of Job (Optional)</label>
+          <label for="oal">Overall Length of Part (Optional)</label>
           <input 
             formControlName='oal'
             type="number" 
